--- a/omc-rust/Cargo.toml
+++ b/omc-rust/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2024"
 [dependencies]
 base64 = "0.22.1"
 chrono = "0.4.41"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
 sha1 = "0.10.6"
 tokio = { version = "1.45.1", features = ["full"] }
